--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			</div>
 
 			<div class="card">
-				<img src="https://rog.asus.com/forum/attachment.php?attachmentid=64730&stc=1&thumb=1&d=1495348739"
+				<img src="https://images.saymedia-content.com/.image/t_share/MTc0MTM1MDUxMjM4NzEyNjM1/troubleshooting-your-cable-tv.jpg"
 					alt="image" />
 				<div class="card__right-text">
 					<div>
